<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="playlist_btn">Playlist</string>
    <string name="favorites_btn">Favorites</string>
    <string name="total_song">All Songs</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="world_of_music">World Of Music</string>
    <string name="song_name">Song name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>d
    <string name="end_tv">Loading…</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to\nWorld of Music</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song Album</string>
    <string name="min_15">15</string>
    <string name="min_30">30</string>
    <string name="min_60">60</string>
    <string name="search_view">Search</string>
    <string name="song_img">Song Image</string>
    <string name="playlist_name">Playlist name</string>
    <string name="playlist_delete">Delete </string>
    <string name="user_name">Name</string>
    <string name="add_song">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search song</string>
    <string name="topic_feedback">Topic</string>
    <string name="email_feedback">Email Address</string>
    <string name="send">Send</string>
    <string name="version_name">Software Version</string>
    <string name="set_theme">Set Theme</string>
    <string name="sort_by">Sort By</string>
    <string name="playlist_edit">Edit Playlist</string>
    <string name="color_palette">Color Palette</string>
</resources>