<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/playlistView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:strokeWidth="2dp"
    app:strokeColor="?attr/themeColor"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@android:color/transparent">
    <!--app:cardBackgroundColor="@android:color/transparent"-->
    <!--android:backgroundTint="@android:color/transparent"-->

    <!--ImageBox-->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playlistImg"
        android:layout_width="170dp"
        android:layout_height="130dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/song_img"
        android:scaleType="centerCrop"
        android:src="@drawable/ei_icon"
        app:shapeAppearanceOverlay="@style/curved"
        app:cardBackgroundColor="@android:color/transparent"/>

    <TextView
        android:id="@+id/playlistName"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/playlist_name"
        android:text="@string/playlist_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:ellipsize="marquee"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        />

    <!-- Edit button -->
    <ImageButton
        android:id="@+id/playlistEditBtn"
        android:layout_width="37dp"
        android:layout_height="35dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="130dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/playlist_edit"
        android:src="@drawable/edit_icon"
        />

    <!-- Delete button -->
    <ImageButton
        android:id="@+id/playlistDeleteBtn"
        android:layout_width="37dp"
        android:layout_height="35dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/playlist_delete"
        android:src="@drawable/delete_icon" />


</com.google.android.material.card.MaterialCardView>