<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <ImageButton
            android:id = "@+id/backBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/previous_icon"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"
            app:tint="@color/black"
            android:contentDescription="@string/back_btn"
            android:padding="5dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:text="Music Player"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_weight="1"
        tools:ignore="NestedWeights"
       />

        <!--Heart Icon on header-->
    <ImageButton
        android:id="@+id/favoriteBtnPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/favorite_empty_icon"
        android:background="@android:color/transparent"
        android:layout_marginEnd="15dp"
        app:tint="@android:color/holo_red_dark"
        android:contentDescription="@string/favorites_btn"
        />

    </LinearLayout>

    <!--Song Image-->
    <com.google.android.material.imageview.ShapeableImageView
        android:id = "@+id/songImgPA"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@drawable/ei_icon"
        android:scaleType="fitXY"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="5dp"/>

    <!--Current song name element under image-->
    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="Song name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_weight="1"
        android:gravity="center"/>

    <!--song control panel-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1">

        <!--prev btn-->
        <ImageButton
            android:id="@+id/previousBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/previous_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="8dp"
            app:tint="@color/cool_blue"
            android:layout_weight="1"/>

        <!--pause btn-->
        <ImageButton
            android:id="@+id/playPauseBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pause_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="8dp"
            app:tint="@color/cool_blue"
            android:layout_weight="1"/>

        <!--next btn-->
        <ImageButton
            android:id="@+id/nextBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/next_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="8dp"
            app:tint="@color/cool_blue"
            android:layout_weight="1"/>

    </LinearLayout>

    <!--Seekbar songtrack element-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvSeekBarStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="00:00"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights"/>

        <TextView
            android:id="@+id/tvSeekBarEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="Loading..."
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageButton
            android:id = "@+id/repeatBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            android:minHeight="40dp"
            android:src="@drawable/repeat_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="5dp"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/repeat_btn"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/equalizerBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            android:minHeight="40dp"
            android:src="@drawable/equalizer_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="5dp"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/equalizer_btn"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/timerBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            android:minHeight="40dp"
            android:src="@drawable/timer_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="5dp"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/timer_btn"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/shareBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            android:minHeight="40dp"
            android:src="@drawable/share_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="5dp"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/share_btn"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>