<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:background="@color/black"
    android:paddingTop="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/color_palette"
        android:background="@color/white"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/white">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolPinkTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/cool_pink"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolBlueTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/cool_blue"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolPurpleTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/purple_500"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolGreenTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/cool_green"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolBlackTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/sort_by"
            android:background="@color/white"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center|start"
            android:layout_weight="1"
            tools:ignore="RtlSymmetry"
            android:paddingStart="10dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/sortBtn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/sort_icon"
            android:tint="@color/cool_pink"
            android:paddingEnd="10dp"/>

    </LinearLayout>
F
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectBgImage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Background Image"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:backgroundTint="@color/white"
            android:gravity="start|center_vertical"
            android:padding="10dp" />

    </LinearLayout>


    <TextView
        android:id="@+id/versionName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/version_name"
        android:background="@color/white"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:padding="10dp"/>


</LinearLayout>
